# Project_Kurs

./: build.gradle  cert.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/umerov/project/: App.kt  Constants.kt  Extra.kt  Includes.kt
app/src/main/kotlin/dev/umerov/project/activity/: BaseMvpActivity.kt  MainActivity.kt
app/src/main/kotlin/dev/umerov/project/db/: ProjectDBHelper.kt
app/src/main/kotlin/dev/umerov/project/fragment/: PreferencesFragment.kt  SecurityPreferencesFragment.kt
app/src/main/kotlin/dev/umerov/project/listener/: CanBackPressedCallback.kt
app/src/main/kotlin/dev/umerov/project/materialpopupmenu/: MaterialPopupMenu.kt  MaterialPopupMenuBuilder.kt  PopupAnimation.kt
app/src/main/kotlin/dev/umerov/project/modalbottomsheetdialogfragment/: ModalBottomSheetDialogFragment.kt
app/src/main/kotlin/dev/umerov/project/model/: FileItemSelect.kt  SlidrSettings.kt
app/src/main/kotlin/dev/umerov/project/place/: PlaceFactory.kt
app/src/main/kotlin/dev/umerov/project/settings/: CurrentTheme.kt  ISettings.kt  MainSettings.kt  SecuritySettings.kt  SettingsImpl.kt
app/src/main/kotlin/dev/umerov/project/util/: AppPerms.kt  Camera2ImageProcessingUtil.kt  ErrorLocalizer.kt  InstancesCounter.kt  MessagesReplyItemCallback.kt  Utils.kt  ViewUtils.kt
app/src/main/kotlin/dev/umerov/project/view/: FABBehavior.kt  MySearchView.kt  RoundCornerLinearView.kt
app/src/main/res/drawable/: money_request_outline.xml  money_transfer_outline.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: bottom_navigation_menu.xml  entry_operation.xml  fragment_coin.xml  fragment_create_pin.xml  item_coin_operation.xml  item_manager_file.xml  item_manager_folder.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night-v31/: colors.xml
app/src/main/res/values-ru/: strings.xml
applabs/: build.gradle  proguard-rules.pro
applabs/src/main/: AndroidManifest.xml
applabs/src/main/assets/: female-svgrepo-com.svg_lz4  lab_12_test.txt  male-svgrepo-com.svg_lz4
applabs/src/main/kotlin/dev/umerov/project/: App.kt  Constants.kt  Extensions.kt  Extra.kt  Includes.kt
applabs/src/main/kotlin/dev/umerov/project/activity/: ActivityFeatures.kt  ActivityUtils.kt  CreatePinActivity.kt  EnterPinActivity.kt  FileManagerSelectActivity.kt  MainActivity.kt  NoMainActivity.kt  SnakeActivity.kt
applabs/src/main/kotlin/dev/umerov/project/db/: ProjectDBHelper.kt
applabs/src/main/kotlin/dev/umerov/project/fragment/: PreferencesFragment.kt  SecurityPreferencesFragment.kt
applabs/src/main/kotlin/dev/umerov/project/listener/: BackPressCallback.kt  EndlessRecyclerOnScrollListener.kt  OnSectionResumeCallback.kt  PicassoPauseOnScrollListener.kt  TextWatcherAdapter.kt  UpdatableNavigation.kt
applabs/src/main/kotlin/dev/umerov/project/materialpopupmenu/: OnShowCallback.kt
applabs/src/main/kotlin/dev/umerov/project/modalbottomsheetdialogfragment/: ModalBottomSheetDialogFragment.kt  Option.kt  OptionHolder.kt  OptionRequest.kt
applabs/src/main/kotlin/dev/umerov/project/model/: FileItem.kt  FileType.kt  Human.kt  Lang.kt  SectionItem.kt
applabs/src/main/kotlin/dev/umerov/project/picasso/: PicassoFileManagerHandler.kt  (+1 more)
applabs/src/main/res/drawable/: client_round.xml  document_text_outline_24.xml  image.xml  snake_arrow_down.xml  snake_arrow_left.xml  snake_arrow_right.xml  snake_arrow_up.xml  snake_restart_button.xml  splash.xml
applabs/src/main/res/drawable-v24/: splash.xml
applabs/src/main/res/layout/: activity_camera_scan.xml  activity_snake.xml  custom_searchview.xml  entry_file_name.xml  entry_finance_operation.xml  entry_lab11_film.xml  entry_lab11_genre.xml  entry_lab11_select_genre.xml  entry_lab14_playlist.xml  entry_lab9_contact.xml  entry_shopping_list.xml  entry_shopping_product.xml  entry_staff.xml  fragment_balance.xml  fragment_enter_pin.xml  fragment_file_explorer.xml  fragment_finance_wallets.xml  fragment_lab1.xml  fragment_lab10.xml  fragment_lab11_films.xml  fragment_lab12.xml  fragment_lab13.xml  fragment_lab14.xml  fragment_lab15.xml  fragment_lab16.xml  fragment_lab17.xml  fragment_lab19.xml  fragment_lab2.xml  fragment_lab3.xml  fragment_lab4.xml  fragment_lab5.xml  fragment_lab6.xml  fragment_lab7.xml  fragment_lab8.xml  fragment_lab9.xml  fragment_main.xml  fragment_shopping_list.xml  fragment_shopping_product.xml  item_array_text.xml  item_film.xml  (+16 more)
applabs/src/main/res/layout-land/: activity_snake.xml
applabs/src/main/res/menu/: menu_lab14_sort.xml  menu_main.xml
applabs/src/main/res/raw/: lab13_run_left.json_lz4  lab13_run_right.json_lz4  lab_12_test.txt  project.json_lz4
applabs/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml
applabs/src/main/res/values-night/: colors.xml
applabs/src/main/res/values-ru/: strings.xml
applabs/src/main/res/values-v31/: colors.xml
coursework/: build.gradle  proguard-rules.pro
coursework/src/main/: AndroidManifest.xml
coursework/src/main/kotlin/dev/umerov/project/: App.kt  Constants.kt  Extensions.kt  Extra.kt  Includes.kt
coursework/src/main/res/drawable/: dollar_circle_outline.xml
coursework/src/main/res/drawable-v24/: ic_launcher_monochrome.xml
coursework/src/main/res/layout/: dialog_about_us.xml  entry_operation.xml  fragment_balance.xml  fragment_file_select_explorer.xml  item_coin_operation.xml  item_manager_file.xml  item_manager_folder.xml  item_theme.xml  modal_bottom_sheet_dialog_fragment_header.xml
coursework/src/main/res/values/: strings.xml
coursework/src/main/res/values-land/: dimens.xml
coursework/src/main/res/values-ru/: strings.xml
coursework/src/main/res/values-sw600dp-land/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
material/: build.gradle
native/: build.gradle
native/src/main/jni/: CMakeLists.txt  file_utils_jni.cpp  parcel_jni.cpp  project_native.h  string_exist_jni.cpp
native/src/main/jni/animation/: image_processing_util_jni.cpp  lottie_jni.cpp  thorvg_jni.cpp
(+429 files in other folders)
